# benchmarks

./: .gitmodules  README.md  index.html  params.json
CA1_migliore/: buildCA1Pyr.py  timeCA1Pyr.py
RNG/: CMakeLists.txt  README.md  execute_me_for_benchmarking.sh  main.cpp  main_mpi.cpp  main_openmp.cpp  report.tex
RNG/_data/: benchmarkdata_boost_april8_chamcham.csv  benchmarkdata_gsl_april8_chamcham.csv  benchmarkdata_stl_april18_chamcham.csv
Rallpacks/moose_vs_neuron/: plot_benchmark.py
Rallpacks/moose_vs_neuron/rallpack1/: cable_in_neuron.hoc  (+1 more)
SWC_Models/: README  _profile.py  _profile.sqlite  benchmark_all.sh  ca1_migliore_moose.py  compare.py  count_spike.py  extract_data_from_sqlite_database.sh  loader_moose.py  loader_neuron.py  moose_performance.csv  na3.mod  plot_benchmark.py  plot_benchmark_runtime_vs_compt.py  run_benchmark.sh  summary_profile.sh  swc_loader.py  test_moose.sh  test_nrn.sh
SWC_Models/bug/: hd.mod  loader_neuron.py  nax.mod  swc_loader.py  test_nrn.sh
SWC_Models/chans/: channelml_to_nrn.sh  kdr.mod
SWC_Models/test/: buildCA1Pyr.py  timeCA1Pyr.py
Solvers/HSolve/: testHsolve.py
moose_nrn_equivalence_testing/: check_equivalence.py  compare_data.py  ko20x-01.CNG.swc  loader_moose.py  loader_neuron.py  loader_neuron.py.clean  loader_neuron.py~  moose_out.csv  moose_to_neuron.py  nrn_out.csv  run.sh  test.py  test_nrn.hoc
moose_nrn_equivalence_testing/comparision_with_simple_HH_model/: KChannel_HH.mod  LeakConductance.mod  Makefile  NOTES  NaChannel_HH.mod  check_equivalence.py  compare.py  loader_moose.py  moose_to_neuron.py  run.sh
moose_nrn_equivalence_testing/comparision_with_simple_HH_model_additional_mechanism/: Makefile  chans  check_equivalence.py  compare.csv  compare.hs  compare.py  compare_moose_nrn_single_vector.py  comparision_data.xml  csv_extract_columns.py  modifiers.txt  moose_soma.csv  moose_to_neuron.py  nrn_soma.csv  run.sh  xplot.py
moose_nrn_equivalence_testing/hh_model/: Makefile  check_equivalence.py  loader_moose.py  moose_to_neuron.py  run.sh
moose_nrn_equivalence_testing/x86_64/: *.inc  hd.c  kad.c  kap.c  kdr.c  mod_func.c  na3.c  nax.c  special
neuro_morpho/: README.md  _do_rest_of_moose.sh  _profile.sqlite  channel_distribution.sh  count_spike.py  generate_csv_files.py  loader_neuron.py  moose_performance.csv  plot_benchmark.py  plot_benchmark_runtime_vs_compt.py  plot_gnuplot.sh  plot_tikz.sh  plot_tikz.tex  run_benchmark.sh  summary_profile.sh  test_moose.sh  test_nrn.sh
neuro_morpho/_plots/: moose_benchmark.csv  neuron_benchmark.csv
swc_models/: CA1.morph.mod  ChannelML_v1.8.1_NEURONmod.xsl  ConvertCML.py  DoubExpSyn.mod  Generated.net.mod  Makefile  _profile.py  _profile.sqlite  benchmark.csv  benchmark_all.sh  benchmark_neuron.sh  channelml_to_nrn.sh  compare.sh  hd.mod  kad.mod  kap.mod  kdr.mod  loader.py  loader_moose.py  loader_neuron.py  na3.mod  nax.mod  nrn.sh  pas.mod  plot_benchmark.py  profile.csv  swc_loader.py  swc_loader_neuron.py  temp.mod  temp.xml  test_moose.sh  test_nrn.sh
swc_models/_data/: moose.csv
swc_models/bug/: loader_neuron.py
swc_models/test/: timeCA1Pyr.py
(+71 files in other folders)
